JDK-7148486 : At a method handle call returning with an exception may call the runtime with misaligned stack (x64)
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs23
  • Priority: P3
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: x86
  • Submitted: 2012-02-24
  • Updated: 2013-06-26
  • Resolved: 2012-03-07
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
When returning with an exception at a method handle call, both c1 and c2 may call the runtime with a misaligned stack (not 16 bytes aligned). This does not conform to the platform ABI and may crash the VM.
observed with test lang/EXPR/expr751/expr75101m5/expr75101m5_rt

Comments
EVALUATION http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/bf7796b7367a
22-03-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/bf7796b7367a
27-02-2012

EVALUATION See description.
24-02-2012