7148486: At a method handle call returning with an exception may call the runtime with misaligned stack (x64)

Stack must be realigned when calling the runtime for exception propagation at a call.

Reviewed-by: kvn, never